Add reload, cleanup, and dslink.json.

--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "dslink-javascript-salesforce",
   "version": "0.0.1",
   "description": "DSLink for Salesforce API",
-  "main": "salesforce.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "jsforce": "^1.4.1",
-    "sdk-dslink-javascript": "git+http://github.com/IOT-DSA/sdk-dslink-javascript.git#artifacts"
+    "dslink": "git://github.com/IOT-DSA/sdk-dslink-javascript.git#artifacts",
+    "es6-promise": "^3.0.2",
+    "jsforce": "^1.4.1"
   }
 }
